--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -13,23 +13,19 @@
         <div class="form-group">
           <label>Email</label>
 
-          <input type="email" name="email" class="form-control" ng-model="user.email" required>
+          <input type="text" name="email" class="form-control" ng-model="user.email">
         </div>
 
         <div class="form-group">
           <label>Password</label>
 
-          <input type="password" name="password" class="form-control" ng-model="user.password" required>
+          <input type="password" name="password" class="form-control" ng-model="user.password">
         </div>
 
         <div class="form-group has-error">
           <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
              Please enter your email and password.
           </p>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-             Please enter a valid email.
-          </p>
-
           <p class="help-block">{{ errors.other }}</p>
         </div>
 
@@ -42,6 +38,15 @@
           </a>
         </div>
 
+        <hr>
+        <div>
+          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
+            <i class="fa fa-facebook"></i> Connect with Facebook
+          </a>
+          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
+            <i class="fa fa-google-plus"></i> Connect with Google+
+          </a>
+        </div>
       </form>
     </div>
   </div>
