add linkedin, github oauth

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -40,11 +40,11 @@
 
         <hr>
         <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
+          <a class="btn btn-github" href="" ng-click="loginOauth('github')">
+            <i class="fa fa-github"></i> Connect with Github  
           </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
+          <a class="btn btn-github" href="" ng-click="loginOauth('linkedin')">
+            <i class="fa fa-linkedin"></i> Connect with Linkedin  
           </a>
         </div>
       </form>
