--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -2,53 +2,19 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
+    <div class="col-xs-3 col-sm-6 col-md-6 col-lg-6">
+      <div class="row padding-top" align="center"">
+	<h1>10초 만에 Github 로 가입하기</h1>
+      </div>
+      <hr>
+      <br/>
+      <div class="row" align="center"">
+        <a class="btn-lg btn-primary" href="" ng-click="loginOauth('github')">
+          <i class="fa fa-github"></i> Connect with Github  
+        </a>
+      </div>
     </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="login(form)" novalidate>
-
-        <div class="form-group">
-          <label>Email</label>
-
-          <input type="text" name="email" class="form-control" ng-model="user.email">
-        </div>
-
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.password">
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block">{{ errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
-          </a>
-        </div>
-
-        <hr>
-        <div>
-          <a class="btn btn-github" href="" ng-click="loginOauth('github')">
-            <i class="fa fa-github"></i> Connect with Github  
-          </a>
-          <a class="btn btn-github" href="" ng-click="loginOauth('linkedin')">
-            <i class="fa fa-linkedin"></i> Connect with Linkedin  
-          </a>
-        </div>
-      </form>
-    </div>
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
   </div>
-  <hr>
 </div>
