--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
     <script src="components/auth/user.service.js"></script>
     <script src="components/mongoose-error/mongoose-error.directive.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
+    <script src="components/navbar/navbar.directive.js"></script>
     <!-- endinjector -->
     <!-- endbuild -->
   </body>
