TERN-20 fix: angular login state bug
1. 로그인한 유저도 `/login` 으로 접근할 수 있음
-> LoginCtrl 에서 loggedin 검사하여 처리

2. `/` 에서 로그아웃하면 state 가 변하지 않음
-> $location 대신 $state 이용

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -9,7 +9,7 @@
       <hr>
       <br/>
       <div class="row" align="center"">
-        <a class="btn-lg btn-primary" href="" ng-click="loginOauth('github')">
+        <a class="btn-lg btn-primary" href="" ng-click="loginWith('github')">
           <i class="fa fa-github"></i> Connect with Github  
         </a>
       </div>
