change app background, nav color

--- a/client/app/main/loggedin.html
+++ b/client/app/main/loggedin.html
@@ -1,21 +1,27 @@
 <div class="container">
   <md-grid-list md-cols-sm="2" md-cols-gt-sm="6"
 		md-row-height-sm="3:2" md-row-height-gt-md="3:2"
-		md-gutter="10px" md-gutter-gt-sm="20px">
+		md-gutter="10px" md-gutter-gt-sm="45px">
 
     <md-grid-tile md-rowspan="2" md-colspan="2">
       <md-card id="#language1" class="language1-card" layout="column" layout-fill>
 	<md-toolbar class="md-primary">
-	  <div class="md-toolbar-tools"> <h3>Active Language 1</h3> </div>
+	  <div class="md-toolbar-tools"> <h3>Ranking 1</h3> </div>
 	</md-toolbar>
+	<md-content flex>
+	  
+	</md-content>
       </md-card>
     </md-grid-tile>
 
     <md-grid-tile md-rowspan="2" md-colspan="2">
       <md-card id="#language-trend" class="language-trend-card" layout="column" layout-fill>
-	<md-toolbar>
+	<md-toolbar class="md-primary md-hue-1">
 	  <div class="md-toolbar-tools"> <h3>Fans</h3> </div>
 	</md-toolbar>
+	<md-content flex>
+	  
+	</md-content>
       </md-card>
     </md-grid-tile>
     
@@ -48,8 +54,11 @@
     <md-grid-tile md-rowspan="2" md-colspan="2">
       <md-card id="#language2" class="language2-card" layout="column" layout-fill>
 	<md-toolbar class="md-primary">
-	  <div class="md-toolbar-tools"> <h3>Active Language 2</h3> </div>
+	  <div class="md-toolbar-tools"> <h3>Ranking 2</h3> </div>
 	</md-toolbar>
+	<md-content flex>
+	  
+	</md-content>
       </md-card>
     </md-grid-tile>
 
@@ -58,6 +67,9 @@
 	<md-toolbar class="md-warn">
 	  <div class="md-toolbar-tools"> <h3>Questions</h3> </div>
 	</md-toolbar>
+	<md-content flex>
+	  
+	</md-content>
       </md-card>
     </md-grid-tile>
 
@@ -66,6 +78,9 @@
 	<md-toolbar class="md-primary">
 	  <div class="md-toolbar-tools"> <h3>Active Course</h3> </div>
 	</md-toolbar>
+	<md-content flex>
+	  
+	</md-content>
       </md-card>
     </md-grid-tile>
   </md-grid-list>
