--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,9 @@
 	 <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ui-view=""></div>
+    <div class="app">
+      <ui-view>
+    </div>
 
     <!--[if lt IE 9]>
 	      <script src="bower_components/es5-shim/es5-shim.js"></script>
