--- a/client/app/account/profile/profile.html
+++ b/client/app/account/profile/profile.html
@@ -11,7 +11,7 @@
       <rebot-profile-sidebar flex />
     </md-sidenav>
     
-    <md-content flex class="md-padding md-whiteframe-z1">
+    <md-content flex class="md-whiteframe-z1 profile-content">
       <rebot-profile-content flex />
     </md-content>
   </section>
