fix: profile tab extra margin bug

--- a/client/app/account/profile/github-tab.template.html
+++ b/client/app/account/profile/github-tab.template.html
@@ -1,1 +1,15 @@
 
+<md-grid-list class="github-tab"
+	      md-cols-sm="1" md-cols-md="2" md-cols-gt-md="4"
+	      md-row-height="4:4" 
+	      layout-align="spaced-around center">
+  <md-grid-tile class="ranking" md-rowspan="2" md-colspan="2" flex>
+    Ranking
+  </md-grid-tile>
+  <md-grid-tile class="language" md-rowspan="1" md-colspan="2">
+    Language
+  </md-grid-tile>
+  <md-grid-tile class="activity" md-rowspan="1" md-colspan="2">
+    Activity
+  </md-grid-tile>
+</md-grid-list>
