--- a/client/app/account/profile/github-tab.template.html
+++ b/client/app/account/profile/github-tab.template.html
@@ -1,15 +1,36 @@
 
 <md-grid-list class="github-tab"
 	      md-cols-sm="1" md-cols-md="2" md-cols-gt-md="4"
-	      md-row-height="4:4" 
-	      layout-align="spaced-around center">
-  <md-grid-tile class="ranking" md-rowspan="2" md-colspan="2" flex>
-    Ranking
+	      md-row-height="4:4" layout-fill>
+
+  <!-- Ranking card -->
+  <md-grid-tile class="ranking" md-rowspan="2" md-colspan="2">
+    <div layout="column" layout-align="center center" flex>
+      <h1 class="rankTitle">Trend Ranking</h1>
+      <h1 class="rankIndex"> {{ userStat.rankIndex }} </h1>
+      <div layout="row">
+	<div ng-repeat="m in rankMeasualment">
+	  <div class="rank-measurement" layout="column" layout-align="center center">
+	    <h3>{{ userStat[m] }}</h3>
+	    <md-button class="md-fab md-padding rank-button" aria-label="{{ m }}">
+	      <md-icon md-svg-src="assets/images/profile/{{ m }}.svg"></md-icon>
+	    </md-button>
+	    <h3>{{ m }}</h3>
+	    <br/>
+	  </div>
+	</div>
+      </div>
+    </div>
   </md-grid-tile>
+  
+  <!-- Language card -->
   <md-grid-tile class="language" md-rowspan="1" md-colspan="2">
     Language
   </md-grid-tile>
+  
+  <!-- Activity card -->
   <md-grid-tile class="activity" md-rowspan="1" md-colspan="2">
     Activity
   </md-grid-tile>
+  
 </md-grid-list>
