TERN-15 add d3pie.js, set injector in Gruntfile.js

--- a/client/index.html
+++ b/client/index.html
@@ -54,8 +54,6 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- angular material -->
-
     <!-- build:js({.tmp,client}) app/app.js -->
     <script src="app/app.js"></script>
     <!-- injector:js -->
@@ -74,6 +72,7 @@
     <script src="app/main/loggedin.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/main/main.js"></script>
+    <script src="assets/js/d3pie.min.js"></script>
     <script src="components/auth/auth.service.js"></script>
     <script src="components/auth/user.service.js"></script>
     <script src="components/mongoose-error/mongoose-error.directive.js"></script>
