TERN-15 set lang chart color

--- a/client/app/account/profile/github-tab.template.html
+++ b/client/app/account/profile/github-tab.template.html
@@ -25,7 +25,9 @@
   
   <!-- Language card -->
   <md-grid-tile class="language" md-rowspan="1" md-colspan="2">
-    Language
+    <div layout="column" layout="row" layout-align="center center">
+      <div id="langChart"></div>
+    </div>
   </md-grid-tile>
   
   <!-- Activity card -->
