TERN-29 new: UserLangChart service

--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,7 @@
     <script src="app/account/login/login.controller.js"></script>
     <script src="app/account/profile/profile.controller.js"></script>
     <script src="app/account/profile/profile.directive.js"></script>
+    <script src="app/account/profile/profile.service.js"></script>
     <script src="app/contrib/contrib.controller.js"></script>
     <script src="app/contrib/contrib.js"></script>
     <script src="app/course/course.controller.js"></script>
