TERN-15 done: github tab design

--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
     <script src="components/mongoose-error/mongoose-error.directive.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
     <script src="components/navbar/navbar.directive.js"></script>
+    <script src="components/utility/utility.factory.js"></script>
     <!-- endinjector -->
     <!-- endbuild -->
 
