--- a/client/app/account/profile/github-tab.template.html
+++ b/client/app/account/profile/github-tab.template.html
@@ -1,7 +1,7 @@
 
 <md-grid-list class="github-tab"
 	      md-cols-sm="1" md-cols-md="2" md-cols-gt-md="4"
-	      md-row-height="4:4" layout-fill>
+	      md-row-height="4:4">
 
   <!-- Ranking card -->
   <md-grid-tile class="ranking" md-rowspan="2" md-colspan="2">
@@ -26,13 +26,14 @@
   <!-- Language card -->
   <md-grid-tile class="language" md-rowspan="1" md-colspan="2">
     <div layout="column" layout="row" layout-align="center center">
-      <div id="langChart"></div>
+      <div id="lang-chart"></div>
     </div>
   </md-grid-tile>
   
   <!-- Activity card -->
   <md-grid-tile class="activity" md-rowspan="1" md-colspan="2">
-    Activity
+    <div layout="column" layout-align="center center">
+    <div id="activity-chart" flex></div>
   </md-grid-tile>
   
 </md-grid-list>
