--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
     <script src="app/job/job.js"></script>
     <script src="app/language/language.controller.js"></script>
     <script src="app/language/language.js"></script>
+    <script src="app/language/language.service.js"></script>
     <script src="app/main/loggedin.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/main/main.js"></script>
