--- a/client/index.html
+++ b/client/index.html
@@ -68,10 +68,9 @@
     <script src="app/account/profile/profile.controller.js"></script>
     <script src="app/account/profile/profile.directive.js"></script>
     <script src="app/account/profile/profile.service.js"></script>
-    <script src="app/contrib/contrib.controller.js"></script>
-    <script src="app/contrib/contrib.js"></script>
     <script src="app/course/course.controller.js"></script>
     <script src="app/course/course.js"></script>
+    <script src="app/course/course.service.js"></script>
     <script src="app/job/job.controller.js"></script>
     <script src="app/job/job.js"></script>
     <script src="app/language/language.controller.js"></script>
