login, landing page done

--- a/client/index.html
+++ b/client/index.html
@@ -91,10 +91,13 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
+      <div layout="column">
+	Copyright © 2015 Trend Factory 
+      </div>
+      <div>
 	<p>
-	  <a href="">@Choduck</a>
-	  <a href="">@1ambda</a>
+	  <a href="https://github.com/ChoDuk">@ChoDuk</a>
+	  <a href="https://github.com/1ambda">@1ambda</a>
 	</p>
       </div>
     </footer>
