--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,7 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="container">
-  <div class="row">
+<div class="container login">
+  <div class="row" align="center">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="row padding-top" align="center"">
 	<h1>10초 만에 Github 로 가입하기</h1>
@@ -12,16 +12,6 @@
           <i class="fa fa-github"></i> Connect with Github  
         </a>
       </div>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
     </div>
   </div>
 </div>
