--- a/client/app/main/public.html
+++ b/client/app/main/public.html
@@ -1,18 +1,39 @@
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-  </div>
-</header>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1>{{ name }}</h1>
+<div class="container shirt-cont">
+  <section>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+	<div class="row">
+          <div class="col-md-5" align="center">
+	    <img src="/assets/images/public/shirt.svg" alt="" class="shirt">
+          </div>
+          <div class="col-md-7">
+            <h1>Let them know</h1>
+	    <h1 class="h1-bottom">How great you are</h1>
+            <p>WorkMob also exposes you to new clients. We’ve partnered with some of the top product companies in the world.</p>
+            <p>Companies like Sendgrid and Balanced Payments help us to connect you with great clients using modern technologies and solving interesting problems.</p>
+          </div>
+	</div>
+      </div>
     </div>
-  </div>
+  </section>
 </div>
 
-<footer class="footer">
-  <div class="container">
-  </div>
-</footer>
+<div class="container code-cont">
+  <section>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+	<div class="row">
+          <div class="col-md-7">
+            <h1>Based on your code</h1>
+            <p>Share your projects with other freelancers, get verified public reviews from your past clients, and display your your projects for world to see.</p>
+            <p>WorkMob is a place to keep your share and leverage your freelance history.</p>
+          </div>
+          <div class="col-md-5" align="center">
+            <img src="/assets/images/public/semantic.svg" alt="" class="semantic">
+          </div>
+	</div>
+      </div>
+    </div>
+  </section>
+</div>
+
